src/app/pages/explore/filter/filter.component.scss
:host{
  z-index: 1000;
  transition: right 0.3s linear;
  position: fixed;
  display: grid;
  height: 100vh;
  grid-template-rows: 20px 80px auto;
  grid-template-columns: 80px 300px;
  grid-template-areas:
    "space menu"
    "button menu"
    "space2 menu";
  }

.checkbox-container{
  width: 100%;
  max-height: 90%;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.checkbox-container::-webkit-scrollbar {
  display: none;
}

.filter-section{
  margin-bottom: 12px;
  width: 100%;
  max-height: 40%;
}


.filter-headline{
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 500;
  font-size: 22px;
}

.filter-button{
  grid-area: button;
  background-color: #00FF57;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 20px 0 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.filter-menu{
  grid-area: menu;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5%;
  height: 100%;
  width: 100%;
  background-color: #00FF57;
  color: white;
}

img{
  height: 70%;
}

